# cleverptr

./: CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt
benchmarks/src/: benchmarks.cpp
cleverptr/: CMakeLists.txt
cleverptr/include/: block.hpp  shared.hpp  shptr.hpp  uniptr.hpp  unique.hpp  weak.hpp  wptr.hpp
cleverptr/include/cleverptr/: unique.hpp  weak.hpp
security/: CMakeLists.txt
security/src/: security.cpp
tests/: CMakeLists.txt
tests/src/: tests.cpp
